# splittarr

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml  cog.toml  config.toml.example
.github/workflows/: ci.yml  clippy.yml  release.yml  releases.yml  rust.yml
docker/hotio/: .dockerignore  README.md  VERSION.json  build.sh  linux-amd64.Dockerfile  update-digests.sh  update-versions.sh
docker/hotio/root/etc/cont-init.d/: 00-start-container  01-configure-app
docker/hotio/root/etc/services.d/splittarr/: run
src/: app.rs  config.rs  domain.rs  globals.rs  lidarr.rs  main.rs  scanner.rs  settings.rs  shnsplit.rs  splitter.rs  store.rs
src/adapters/: filesystem.rs  filesystem_cleanup.rs  filesystem_cue_input_inspector.rs  filesystem_cue_scanner.rs  filesystem_download_log.rs  gnudb_api.rs  lidarr.rs  lidarr_api.rs  mod.rs  musicbrainz_api.rs  shnsplit.rs  shnsplit_splitter.rs  sqlite.rs  sqlite_download_store.rs  web.rs
src/application/: cleanup_processed_download.rs  mod.rs  monitor_download_queue.rs  ports.rs  process_failed_lidarr_imports.rs  process_tracked_download.rs  service.rs
src/application/process_failed_lidarr_imports/: cleanup_download.rs  process_download.rs  register_candidates.rs  run_cycle.rs
src/bootstrap/: settings.rs
src/domain/: cue.rs  download.rs  mod.rs  processing.rs  track.rs
