[package]
name = "splittarr"
version = "0.1.0"
edition = "2021"
authors = ["Gunnar Cortes Heimisson <gnarr.c@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
serde = "1.0.137"
serde_derive = "1.0.137"
