[package]
name = "splittarr"
version = "0.2.4"
edition = "2021"
authors = ["Gunnar Cortes Heimisson <gnarr.c@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
config = "0.13.1"
directories = "4.0.1"
exitfailure = "0.5.1"
itertools = "0.10.3"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
rcue = "0.1.3"
regex = "1"
reqwest = "0.11.10"
rusqlite = { version = "0.28.0", features = ["uuid"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features=["full"]}
uuid = { version = "1.1.2", features=["v4"] }
walkdir = "2.3.2"
