[package]
name = "splittarr"
version = "0.3.0"
edition = "2021"
authors = ["Gunnar Cortes Heimisson <gnarr.c@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = "0.13.1"
directories = "4.0.1"
maud = { version = "0.27", features = ["axum"] }
rcue = "0.1.3"
regex = "1"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
uuid = { version = "1.1.2", features=["v4"] }
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
